[gd_scene load_steps=2 format=3 uid="uid://puhfjg08kws7"]

[ext_resource type="Script" path="res://TextTooltipCompnent.gd" id="1_dsav8"]

[node name="TextTooltipCompnent" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1920.0
offset_bottom = -1080.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dsav8")

[connection signal="mouse_in" from="." to="." method="_on_mouse_in"]
[connection signal="mouse_out" from="." to="." method="_on_mouse_out"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
